# formacheck

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
src/formacheck/: seg.py
src/formacheck/assets/: __init__.py
tests/: test_seg.py
